exports[`prefer-prototype-methods > invalid(1): const foo = [].push.apply(bar, elements); 1`] = `

  1 | const foo = [].push.apply(bar, elements);

`;

exports[`prefer-prototype-methods > invalid(1): const foo = [].push.apply(bar, elements); 2`] = `

Message:
> 1 | const foo = [].push.apply(bar, elements);
    |             ^^^^^^^ Prefer using \`Array.prototype.push\`.

Output:
  1 | const foo = Array.prototype.push.apply(bar, elements);

`;

exports[`prefer-prototype-methods > invalid(10): const array = Reflect.apply([].slice, foo, []) 1`] = `

  1 | const array = Reflect.apply([].slice, foo, [])

`;

exports[`prefer-prototype-methods > invalid(10): const array = Reflect.apply([].slice, foo, []) 2`] = `

Message:
> 1 | const array = Reflect.apply([].slice, foo, [])
    |                             ^^^^^^^^ Prefer using \`Array.prototype.slice\`.

Output:
  1 | const array = Reflect.apply(Array.prototype.slice, foo, [])

`;

exports[`prefer-prototype-methods > invalid(11): Reflect.apply([].bar, baz, []) 1`] = `

  1 | Reflect.apply([].bar, baz, [])

`;

exports[`prefer-prototype-methods > invalid(11): Reflect.apply([].bar, baz, []) 2`] = `

Message:
> 1 | Reflect.apply([].bar, baz, [])
    |               ^^^^^^ Prefer using \`Array.prototype.bar\`.

Output:
  1 | Reflect.apply(Array.prototype.bar, baz, [])

`;

exports[`prefer-prototype-methods > invalid(12): const foo = ({}).toString.call(bar); 1`] = `

  1 | const foo = ({}).toString.call(bar);

`;

exports[`prefer-prototype-methods > invalid(12): const foo = ({}).toString.call(bar); 2`] = `

Message:
> 1 | const foo = ({}).toString.call(bar);
    |             ^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | const foo = (Object.prototype).toString.call(bar);

`;

exports[`prefer-prototype-methods > invalid(13): const foo = ({}.toString).call(bar); 1`] = `

  1 | const foo = ({}.toString).call(bar);

`;

exports[`prefer-prototype-methods > invalid(13): const foo = ({}.toString).call(bar); 2`] = `

Message:
> 1 | const foo = ({}.toString).call(bar);
    |              ^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | const foo = (Object.prototype.toString).call(bar);

`;

exports[`prefer-prototype-methods > invalid(14): const foo = ({}.toString.call)(bar); 1`] = `

  1 | const foo = ({}.toString.call)(bar);

`;

exports[`prefer-prototype-methods > invalid(14): const foo = ({}.toString.call)(bar); 2`] = `

Message:
> 1 | const foo = ({}.toString.call)(bar);
    |              ^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | const foo = (Object.prototype.toString.call)(bar);

`;

exports[`prefer-prototype-methods > invalid(15): function foo(){return[].slice.call(bar);} 1`] = `

  1 | function foo(){return[].slice.call(bar);}

`;

exports[`prefer-prototype-methods > invalid(15): function foo(){return[].slice.call(bar);} 2`] = `

Message:
> 1 | function foo(){return[].slice.call(bar);}
    |                      ^^^^^^^^ Prefer using \`Array.prototype.slice\`.

Output:
  1 | function foo(){return Array.prototype.slice.call(bar);}

`;

exports[`prefer-prototype-methods > invalid(16): function foo(){return{}.toString.call(bar)} 1`] = `

  1 | function foo(){return{}.toString.call(bar)}

`;

exports[`prefer-prototype-methods > invalid(16): function foo(){return{}.toString.call(bar)} 2`] = `

Message:
> 1 | function foo(){return{}.toString.call(bar)}
    |                      ^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | function foo(){return Object.prototype.toString.call(bar)}

`;

exports[`prefer-prototype-methods > invalid(17): Reflect.apply({}[Symbol()], baz, []) 1`] = `

  1 | Reflect.apply({}[Symbol()], baz, [])

`;

exports[`prefer-prototype-methods > invalid(17): Reflect.apply({}[Symbol()], baz, []) 2`] = `

Message:
> 1 | Reflect.apply({}[Symbol()], baz, [])
    |               ^^^^^^^^^^^^ Prefer using method from \`Object.prototype\`.

Output:
  1 | Reflect.apply(Object.prototype[Symbol()], baz, [])

`;

exports[`prefer-prototype-methods > invalid(18): Reflect.apply({}[Symbol(\"symbol description\")], baz, []) 1`] = `

  1 | Reflect.apply({}[Symbol("symbol description")], baz, [])

`;

exports[`prefer-prototype-methods > invalid(18): Reflect.apply({}[Symbol(\"symbol description\")], baz, []) 2`] = `

Message:
> 1 | Reflect.apply({}[Symbol("symbol description")], baz, [])
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using method from \`Object.prototype\`.

Output:
  1 | Reflect.apply(Object.prototype[Symbol("symbol description")], baz, [])

`;

exports[`prefer-prototype-methods > invalid(19): Reflect.apply([][Symbol()], baz, []) 1`] = `

  1 | Reflect.apply([][Symbol()], baz, [])

`;

exports[`prefer-prototype-methods > invalid(19): Reflect.apply([][Symbol()], baz, []) 2`] = `

Message:
> 1 | Reflect.apply([][Symbol()], baz, [])
    |               ^^^^^^^^^^^^ Prefer using method from \`Array.prototype\`.

Output:
  1 | Reflect.apply(Array.prototype[Symbol()], baz, [])

`;

exports[`prefer-prototype-methods > invalid(2): const foo = [].slice.call(bar); 1`] = `

  1 | const foo = [].slice.call(bar);

`;

exports[`prefer-prototype-methods > invalid(2): const foo = [].slice.call(bar); 2`] = `

Message:
> 1 | const foo = [].slice.call(bar);
    |             ^^^^^^^^ Prefer using \`Array.prototype.slice\`.

Output:
  1 | const foo = Array.prototype.slice.call(bar);

`;

exports[`prefer-prototype-methods > invalid(20): [][Symbol.iterator].call(foo) 1`] = `

  1 | [][Symbol.iterator].call(foo)

`;

exports[`prefer-prototype-methods > invalid(20): [][Symbol.iterator].call(foo) 2`] = `

Message:
> 1 | [][Symbol.iterator].call(foo)
    | ^^^^^^^^^^^^^^^^^^^ Prefer using \`Array.prototype.Symbol(Symbol.iterator)\`.

Output:
  1 | Array.prototype[Symbol.iterator].call(foo)

`;

exports[`prefer-prototype-methods > invalid(21): const foo = [].at.call(bar) 1`] = `

  1 | const foo = [].at.call(bar)

`;

exports[`prefer-prototype-methods > invalid(21): const foo = [].at.call(bar) 2`] = `

Message:
> 1 | const foo = [].at.call(bar)
    |             ^^^^^ Prefer using \`Array.prototype.at\`.

Output:
  1 | const foo = Array.prototype.at.call(bar)

`;

exports[`prefer-prototype-methods > invalid(22): const foo = [].findLast.call(bar) 1`] = `

  1 | const foo = [].findLast.call(bar)

`;

exports[`prefer-prototype-methods > invalid(22): const foo = [].findLast.call(bar) 2`] = `

Message:
> 1 | const foo = [].findLast.call(bar)
    |             ^^^^^^^^^^^ Prefer using \`Array.prototype.findLast\`.

Output:
  1 | const foo = Array.prototype.findLast.call(bar)

`;

exports[`prefer-prototype-methods > invalid(23): /* globals hasOwnProperty: readonly */ hasOwnProperty.call(bar) 1`] = `

  1 | /* globals hasOwnProperty: readonly */ hasOwnProperty.call(bar)

`;

exports[`prefer-prototype-methods > invalid(23): /* globals hasOwnProperty: readonly */ hasOwnProperty.call(bar) 2`] = `

Message:
> 1 | /* globals hasOwnProperty: readonly */ hasOwnProperty.call(bar)
    |                                        ^^^^^^^^^^^^^^ Prefer using \`Object.prototype.hasOwnProperty\`.

Output:
  1 | /* globals hasOwnProperty: readonly */ Object.prototype.hasOwnProperty.call(bar)

`;

exports[`prefer-prototype-methods > invalid(24): /* globals toString: readonly */ toString.apply(bar, []) 1`] = `

  1 | /* globals toString: readonly */ toString.apply(bar, [])

`;

exports[`prefer-prototype-methods > invalid(24): /* globals toString: readonly */ toString.apply(bar, []) 2`] = `

Message:
> 1 | /* globals toString: readonly */ toString.apply(bar, [])
    |                                  ^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | /* globals toString: readonly */ Object.prototype.toString.apply(bar, [])

`;

exports[`prefer-prototype-methods > invalid(25): /* globals toString: readonly */ Reflect.apply(toString, baz, []) 1`] = `

  1 | /* globals toString: readonly */ Reflect.apply(toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(25): /* globals toString: readonly */ Reflect.apply(toString, baz, []) 2`] = `

Message:
> 1 | /* globals toString: readonly */ Reflect.apply(toString, baz, [])
    |                                                ^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | /* globals toString: readonly */ Reflect.apply(Object.prototype.toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(26): globalThis.toString.call(bar) 1`] = `

  1 | globalThis.toString.call(bar)

`;

exports[`prefer-prototype-methods > invalid(26): globalThis.toString.call(bar) 2`] = `

Message:
> 1 | globalThis.toString.call(bar)
    | ^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | Object.prototype.toString.call(bar)

`;

exports[`prefer-prototype-methods > invalid(27): const _ = globalThis; _.hasOwnProperty.call(bar) 1`] = `

  1 | const _ = globalThis; _.hasOwnProperty.call(bar)

`;

exports[`prefer-prototype-methods > invalid(27): const _ = globalThis; _.hasOwnProperty.call(bar) 2`] = `

Message:
> 1 | const _ = globalThis; _.hasOwnProperty.call(bar)
    |                       ^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.hasOwnProperty\`.

Output:
  1 | const _ = globalThis; Object.prototype.hasOwnProperty.call(bar)

`;

exports[`prefer-prototype-methods > invalid(28): const _ = globalThis; _[\"hasOwnProperty\"].call(bar) 1`] = `

  1 | const _ = globalThis; _["hasOwnProperty"].call(bar)

`;

exports[`prefer-prototype-methods > invalid(28): const _ = globalThis; _[\"hasOwnProperty\"].call(bar) 2`] = `

Message:
> 1 | const _ = globalThis; _["hasOwnProperty"].call(bar)
    |                       ^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.hasOwnProperty\`.

Output:
  1 | const _ = globalThis; Object.prototype.hasOwnProperty.call(bar)

`;

exports[`prefer-prototype-methods > invalid(29): const _ = globalThis; _[\"hasOwn\" + \"Property\"].call(bar) 1`] = `

  1 | const _ = globalThis; _["hasOwn" + "Property"].call(bar)

`;

exports[`prefer-prototype-methods > invalid(29): const _ = globalThis; _[\"hasOwn\" + \"Property\"].call(bar) 2`] = `

Message:
> 1 | const _ = globalThis; _["hasOwn" + "Property"].call(bar)
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.hasOwnProperty\`.

Output:
  1 | const _ = globalThis; Object.prototype.hasOwnProperty.call(bar)

`;

exports[`prefer-prototype-methods > invalid(3): const foo = {}.toString.call(bar); 1`] = `

  1 | const foo = {}.toString.call(bar);

`;

exports[`prefer-prototype-methods > invalid(3): const foo = {}.toString.call(bar); 2`] = `

Message:
> 1 | const foo = {}.toString.call(bar);
    |             ^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | const foo = Object.prototype.toString.call(bar);

`;

exports[`prefer-prototype-methods > invalid(30): Reflect.apply(globalThis.toString, baz, []) 1`] = `

  1 | Reflect.apply(globalThis.toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(30): Reflect.apply(globalThis.toString, baz, []) 2`] = `

Message:
> 1 | Reflect.apply(globalThis.toString, baz, [])
    |               ^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | Reflect.apply(Object.prototype.toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(31): Reflect.apply(window.toString, baz, []) 1`] = `

  1 | Reflect.apply(window.toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(31): Reflect.apply(window.toString, baz, []) 2`] = `

Message:
> 1 | Reflect.apply(window.toString, baz, [])
    |               ^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | Reflect.apply(Object.prototype.toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(32): Reflect.apply(global.toString, baz, []) 1`] = `

  1 | Reflect.apply(global.toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(32): Reflect.apply(global.toString, baz, []) 2`] = `

Message:
> 1 | Reflect.apply(global.toString, baz, [])
    |               ^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | Reflect.apply(Object.prototype.toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(33): Reflect.apply(globalThis[\"toString\"], baz, []) 1`] = `

  1 | Reflect.apply(globalThis["toString"], baz, [])

`;

exports[`prefer-prototype-methods > invalid(33): Reflect.apply(globalThis[\"toString\"], baz, []) 2`] = `

Message:
> 1 | Reflect.apply(globalThis["toString"], baz, [])
    |               ^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | Reflect.apply(Object.prototype.toString, baz, [])

`;

exports[`prefer-prototype-methods > invalid(34): globalThis /* comment */ .toString.call(bar) 1`] = `

  1 | globalThis /* comment */ .toString.call(bar)

`;

exports[`prefer-prototype-methods > invalid(34): globalThis /* comment */ .toString.call(bar) 2`] = `

Message:
> 1 | globalThis /* comment */ .toString.call(bar)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

`;

exports[`prefer-prototype-methods > invalid(35): Reflect.apply(globalThis[/* comment */ \"toString\"], baz, []) 1`] = `

  1 | Reflect.apply(globalThis[/* comment */ "toString"], baz, [])

`;

exports[`prefer-prototype-methods > invalid(35): Reflect.apply(globalThis[/* comment */ \"toString\"], baz, []) 2`] = `

Message:
> 1 | Reflect.apply(globalThis[/* comment */ "toString"], baz, [])
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

`;

exports[`prefer-prototype-methods > invalid(36): [] /* comment */ .slice.call(bar) 1`] = `

  1 | [] /* comment */ .slice.call(bar)

`;

exports[`prefer-prototype-methods > invalid(36): [] /* comment */ .slice.call(bar) 2`] = `

Message:
> 1 | [] /* comment */ .slice.call(bar)
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Array.prototype.slice\`.

Output:
  1 | Array.prototype /* comment */ .slice.call(bar)

`;

exports[`prefer-prototype-methods > invalid(37): [/* comment */].slice.call(bar) 1`] = `

  1 | [/* comment */].slice.call(bar)

`;

exports[`prefer-prototype-methods > invalid(37): [/* comment */].slice.call(bar) 2`] = `

Message:
> 1 | [/* comment */].slice.call(bar)
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Array.prototype.slice\`.

`;

exports[`prefer-prototype-methods > invalid(38): function foo(){return(globalThis).toString.call(bar)} 1`] = `

  1 | function foo(){return(globalThis).toString.call(bar)}

`;

exports[`prefer-prototype-methods > invalid(38): function foo(){return(globalThis).toString.call(bar)} 2`] = `

Message:
> 1 | function foo(){return(globalThis).toString.call(bar)}
    |                      ^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.toString\`.

Output:
  1 | function foo(){return Object.prototype.toString.call(bar)}

`;

exports[`prefer-prototype-methods > invalid(4): const foo = {}.hasOwnProperty.call(bar, \"property\"); 1`] = `

  1 | const foo = {}.hasOwnProperty.call(bar, "property");

`;

exports[`prefer-prototype-methods > invalid(4): const foo = {}.hasOwnProperty.call(bar, \"property\"); 2`] = `

Message:
> 1 | const foo = {}.hasOwnProperty.call(bar, "property");
    |             ^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.hasOwnProperty\`.

Output:
  1 | const foo = Object.prototype.hasOwnProperty.call(bar, "property");

`;

exports[`prefer-prototype-methods > invalid(5): const foo = {}.propertyIsEnumerable.call(bar, \"property\"); 1`] = `

  1 | const foo = {}.propertyIsEnumerable.call(bar, "property");

`;

exports[`prefer-prototype-methods > invalid(5): const foo = {}.propertyIsEnumerable.call(bar, \"property\"); 2`] = `

Message:
> 1 | const foo = {}.propertyIsEnumerable.call(bar, "property");
    |             ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using \`Object.prototype.propertyIsEnumerable\`.

Output:
  1 | const foo = Object.prototype.propertyIsEnumerable.call(bar, "property");

`;

exports[`prefer-prototype-methods > invalid(6): [].forEach.call(foo, () => {}) 1`] = `

  1 | [].forEach.call(foo, () => {})

`;

exports[`prefer-prototype-methods > invalid(6): [].forEach.call(foo, () => {}) 2`] = `

Message:
> 1 | [].forEach.call(foo, () => {})
    | ^^^^^^^^^^ Prefer using \`Array.prototype.forEach\`.

Output:
  1 | Array.prototype.forEach.call(foo, () => {})

`;

exports[`prefer-prototype-methods > invalid(7): const push = [].push.bind(foo) 1`] = `

  1 | const push = [].push.bind(foo)

`;

exports[`prefer-prototype-methods > invalid(7): const push = [].push.bind(foo) 2`] = `

Message:
> 1 | const push = [].push.bind(foo)
    |              ^^^^^^^ Prefer using \`Array.prototype.push\`.

Output:
  1 | const push = Array.prototype.push.bind(foo)

`;

exports[`prefer-prototype-methods > invalid(8): const foo = [][method].call(foo) 1`] = `

  1 | const foo = [][method].call(foo)

`;

exports[`prefer-prototype-methods > invalid(8): const foo = [][method].call(foo) 2`] = `

Message:
> 1 | const foo = [][method].call(foo)
    |             ^^^^^^^^^^ Prefer using method from \`Array.prototype\`.

Output:
  1 | const foo = Array.prototype[method].call(foo)

`;

exports[`prefer-prototype-methods > invalid(9): const method = \"realMethodName\";const foo = [][method].call(foo) 1`] = `

  1 | const method = "realMethodName";const foo = [][method].call(foo)

`;

exports[`prefer-prototype-methods > invalid(9): const method = \"realMethodName\";const foo = [][method].call(foo) 2`] = `

Message:
> 1 | const method = "realMethodName";const foo = [][method].call(foo)
    |                                             ^^^^^^^^^^ Prefer using \`Array.prototype.realMethodName\`.

Output:
  1 | const method = "realMethodName";const foo = Array.prototype[method].call(foo)

`;
